--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub</title>
-</head>
-<body>
-    Congrulation this is github project
-</body>
+  </head>
+  <body>
+    <section
+      style="
+        background-color: #f4f4f4;
+        padding: 40px;
+        text-align: center;
+        border-radius: 12px;
+        width: 80%;
+        margin: 50px auto;
+      "
+    >
+      <h2 style="font-size: 32px; color: #333; margin-bottom: 15px">
+        Welcome to Our Website
+      </h2>
+      <p
+        style="
+          font-size: 18px;
+          color: #555;
+          line-height: 1.6;
+          margin-bottom: 25px;
+        "
+      >
+        We’re glad you’re here! Explore our services, learn more about what we
+        do, and discover how we can help you achieve your goals.
+      </p>
+      <a
+        href="#"
+        style="
+          background-color: #007bff;
+          color: #fff;
+          padding: 12px 25px;
+          text-decoration: none;
+          border-radius: 6px;
+          font-size: 16px;
+        "
+      >
+        Learn More
+      </a>
+    </section>
+  </body>
 </html>
